Change namespaces Add SearchBoxProperties. It contains attached property for handling the SearchBox events : - Can feed suggestions - ability to bind suggestion result commands

--- a/Hanno/TestUniversalApp/TestUniversalApp.Shared/MainPage.xaml
+++ b/Hanno/TestUniversalApp/TestUniversalApp.Shared/MainPage.xaml
@@ -23,6 +23,7 @@
 		<StackPanel>
 			<Button Content="Test" HorizontalAlignment="Stretch" VerticalAlignment="Center"
 					Command="{Binding Navigate}"/>
+			<Button Content="Test search" Command="{Binding TestSearch}" />
 			<!--<Button Command="{Binding TestEntityConverter}" Content="TestEntityConverter" />-->
 		</StackPanel>
 	</Grid>
