--- a/Hanno/TestUniversalApp/TestUniversalApp.Shared/App.xaml
+++ b/Hanno/TestUniversalApp/TestUniversalApp.Shared/App.xaml
@@ -2,6 +2,14 @@
     x:Class="TestUniversalApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestUniversalApp">
+    xmlns:local="using:TestUniversalApp"
+    xmlns:controls="using:Hanno.MVVM.Controls">
 
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Themes/Generic.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
